fix the y axis handle, small fixes

--- a/trunk.toml
+++ b/trunk.toml
@@ -10,4 +10,4 @@ port = 8080
 
 [watch]
 # Watch additional directories
-ignore = ["dist/", "ui/src/", "ui/node_modules"]
+ignore = ["dist/", "ui/src/", "ui/node_modules", ".git"]
