--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ getrandom = { version = "0.3", features = ["wasm_js"] }
 # For buffer data conversion
 bytemuck = { version = "1.14", features = ["derive"] }
 crossbeam-queue = "0.3"
+crossbeam-channel = "0.2.5"
 wasm-bindgen = "0.2.97"
 wasm-bindgen-futures = "0.4.45"
 web-sys = { version = "0.3.74", features = [
@@ -33,5 +34,4 @@ opt-level = 3
 
 # Optional but helpful for debugging in browser
 console_error_panic_hook = "0.1"
-# Thread-safe queue for WASM commands
-crossbeam-queue = "0.3"
+
