--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ web-sys = { version = "0.3.74", features = [
     "console",
 ] }
 bevy_panorbit_camera = "0.26.0"
+rand = "0.9.1"
 
 # Enable optimizations for dependencies (but not for our code):
 [profile.dev.package."*"]
