--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ web-sys = { version = "0.3.74", features = [
 bevy_panorbit_camera = "0.26.0"
 rand = "0.9.1"
 iyes_perf_ui = "0.5.0"
+bvh = { version = "0.11.0", features = ["serde"] }
+nalgebra = "0.33.2"
 
 # Enable optimizations for dependencies (but not for our code):
 [profile.dev.package."*"]
